@@ -56,12 +56,13 @@ public:
 private:
     boost::posix_time::time_duration m_td;
 
-    friend bdtDu* arith_bdtDu_bdtDu(const bdtDu&, const bdtDu& , std::string);
-    friend bdtDu* arith_bdtDu_int(const bdtDu&,   int, std::string);
-    friend bool compare_bdtDu_bdtDu(const bdtDu&, const bdtDu&, std::string);
-    friend bdtPt* arith_bdtPt_bdtDu(const bdtPt&, const bdtDu&, std::string);
-    friend bdtPt* arith_bdtDu_bdtPt(const bdtDu&, const bdtPt&, std::string);
-    friend bdtDt* arith_bdtDt_int(const bdtDt&,   const int&, std::string);
+    friend bdtDu* arith_bdtDu_bdtDu(  const bdtDu&, const bdtDu&, std::string);
+    friend bdtDu* arith_bdtDu_int(    const bdtDu&, const int,    std::string);
+    friend bdtDu* arith_int_bdtDu(    const int,    const bdtDu&, std::string);
+    friend bool   compare_bdtDu_bdtDu(const bdtDu&, const bdtDu&, std::string);
+    friend bdtPt* arith_bdtPt_bdtDu(  const bdtPt&, const bdtDu&, std::string);
+    friend bdtPt* arith_bdtDu_bdtPt(  const bdtDu&, const bdtPt&, std::string);
+    friend bdtDt* arith_bdtDt_int(    const bdtDt&, const int&,   std::string);
 };
 
 #endif
